--- a/bpd_ui/package.json
+++ b/bpd_ui/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "css-loader": "^3.2.0",
+    "google-map-react": "^1.1.5",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.2"
+    "react-scripts": "3.1.2",
+    "react-vis": "^1.11.7"
   },
   "scripts": {
     "start": "react-scripts start",
