--- a/bpd_ui/package.json
+++ b/bpd_ui/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "css-loader": "^3.2.0",
     "google-map-react": "^1.1.5",
     "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
+    "react-google-maps": "^9.4.5",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.2",
     "react-vis": "^1.11.7"
