--- a/bpd_ui/package.json
+++ b/bpd_ui/package.json
@@ -6,11 +6,13 @@
     "bootstrap": "^4.3.1",
     "css-loader": "^3.2.0",
     "google-map-react": "^1.1.5",
+    "isomorphic-fetch": "^2.2.1",
     "mdbreact": "^4.21.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
     "react-google-maps": "^9.4.5",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.2",
     "react-table": "^6.10.3",
