--- a/bpd_ui/package.json
+++ b/bpd_ui/package.json
@@ -16,7 +16,8 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.2",
     "react-table": "^6.10.3",
-    "react-vis": "^1.11.7"
+    "react-vis": "^1.11.7",
+    "redux": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
