--- a/bpd_ui/package.json
+++ b/bpd_ui/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.11.2",
     "bootstrap": "^4.3.1",
     "css-loader": "^3.2.0",
+    "font-awesome": "^4.7.0",
     "google-map-react": "^1.1.5",
     "isomorphic-fetch": "^2.2.1",
     "mdbreact": "^4.21.0",
