--- a/bpd_ui/package.json
+++ b/bpd_ui/package.json
@@ -10,6 +10,7 @@
     "google-map-react": "^1.1.5",
     "isomorphic-fetch": "^2.2.1",
     "mdbreact": "^4.21.0",
+    "memoize-one": "^5.1.1",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
