Added prediction functionality to the /predict endpoint using Weka

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://130.85.228.219:3306/bpd_crime?serverTimezone=EST
-spring.datasource.username=springuser
-spring.datasource.password=SPRINGPASSWORD
+spring.datasource.url=jdbc:mysql://localhost:3306/bpd_crime?serverTimezone=EST
+spring.datasource.username=root
+spring.datasource.password=password
