--- a/api/pom.xml
+++ b/api/pom.xml
@@ -46,6 +46,12 @@
     		<artifactId>springfox-swagger-ui</artifactId>
     		<version>2.9.2</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/nz.ac.waikato.cms.weka/weka-stable -->
+		<dependency>
+    		<groupId>nz.ac.waikato.cms.weka</groupId>
+    		<artifactId>weka-stable</artifactId>
+    		<version>3.8.3</version>
+		</dependency>
     </dependencies>
 
     <properties>
